# lib/handlers/indexes/{name}/batch.js
@@ -7,7 +7,8 @@ const Index = require('../../../index');
 
 const extensionSchema = Joi.object({
   requests: Joi.array().items(Joi.object({
-    action: Joi.string().valid('create', 'upsert'),
+    action: Joi.string().valid('create', 'upsert', 'delete'),
+    body: Joi.object({}).unknown().when('action', {is: 'delete', then: Joi.any().forbidden(), otherwise: Joi.any().required()}),
     objectID: Joi.string().when('action', {is: 'create', then: Joi.any().forbidden(), otherwise: Joi.any()})
   }).unknown())
 }).unknown();
